--- a/zkdm/python/zkdm/ns/README
+++ b/zkdm/python/zkdm/ns/README
@@ -5,7 +5,6 @@
   		mac: 直接使用 mac 作为 tokenid ？？
 		ip:
 		type: target 类型，已知有 jp100hd, jp100dgl, 3100, 2100 ...
-        info: 来自 target 组播包的完整信息
         last_stamp: 最后收到 pong 的时间
 
   services: 保存 services 信息，将用于服务注册
@@ -13,7 +12,7 @@
 		ip: ?
 		type:
 		id:
-		url:
+		// url: url 应该在注册程序中为其生成，这里不管他
 		online: 是否在线？
 		private: 服务私有属性
 
